<resources>
    <string name="app_name">Riseapps Test Task</string>
    <string name="dialog_positive">OK</string>
    <string name="contacts">Contacts</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="done">Done</string>
    <string name="phone">Phone</string>
    <string name="fill_all_fields">Please fill all fields</string>
</resources>
