<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.ups.riseappstesttask.views.ContactDetailsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvContactDetailsTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/title_font_size" />

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@string/first_name"
            android:textSize="@dimen/main_text_size" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@string/second_name"
            android:textSize="@dimen/main_text_size" />

        <EditText
            android:id="@+id/etSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@string/surname"
            android:textSize="@dimen/main_text_size" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@string/phone"
            android:textSize="@dimen/main_text_size" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@string/email"
            android:textSize="@dimen/main_text_size" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:id="@+id/lvImageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/image_size"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_face_black_48dp"
                    android:padding="15dp"
                    android:src="@drawable/ic_check_white_24dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/image_size"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_face_black_48dp"
                    android:padding="15dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/image_size"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_face_black_48dp"
                    android:padding="15dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/image_size"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_face_black_48dp"
                    android:padding="15dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/image_size"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_face_black_48dp"
                    android:padding="15dp" />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>